--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2y+eWxTbKYeNcOt1RfO2c",
+      "authorship_tag": "ABX9TyO/GEkg9hQPPkK2nGynR4/k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3KyMs7U9z-aQ",
-        "outputId": "a0c48041-540e-4e33-8c89-372a915f752d"
+        "outputId": "059ecd64-b693-4ebf-b2f3-95122a454ff4"
       },
       "outputs": [
         {
@@ -217,28 +217,30 @@
     {
       "cell_type": "code",
       "source": [
-        "array = numpy.arange(1,41).reshape(5,2,4)\n",
+        "array = np.arange(1,41).reshape(5,2,4)\n",
         "\n",
-        "depth , rows, cols = array.shape\n",
+        "# depth , rows, cols = array.shape\n",
         "\n",
-        "middle_dep = depth //2\n",
+        "# middle_dep = depth //2\n",
         "\n",
-        "middle_col = cols //2\n",
+        "# middle_col = cols //2\n",
         "\n",
         "\n",
-        "array[middle_dep, :, middle_col] = 0\n",
-        "array[middle_dep, :, middle_col-1] = 0\n",
+        "# array[middle_dep, :, middle_col] = 0\n",
+        "# array[middle_dep, :, middle_col-1] = 0\n",
+        "array[2,0:2,1:3]=0\n",
         "\n",
-        "print(array)"
+        "print(array)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uTu8M4MK6cdu",
-        "outputId": "41e2a49e-8ce4-495a-b953-8196b6dce5da"
+        "outputId": "a81ee886-1807-4101-f3af-0e0e9d89b147"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +280,7 @@
         "id": "liVkr4p_-gEz",
         "outputId": "5bec70c6-7c99-41a2-9642-2c8988c44afa"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +343,7 @@
         },
         "outputId": "ed13090e-a847-4264-bd98-97f939208bfb"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,6 +364,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GDHUy5aYGB5-"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
